# startup-notification

./: .cvsignore  ChangeLog  Makefile.am  NEWS  autogen.sh  configure.in  libsn-1.0.pc.in  libstartup-notification-1.0.pc.in
doc/: startup-notification.txt
libsn/: .cvsignore  Makefile.am  sn-common.c  sn-common.h  sn-internals.h  sn-launchee.c  sn-launchee.h  sn-launcher.c  sn-launcher.h  sn-list.c  sn-list.h  sn-monitor.c  sn-monitor.h  sn-util.c  sn-util.h  sn-xmessages.c  sn-xmessages.h  sn-xutils.c  sn-xutils.h
test/: .cvsignore  Makefile.am  test-boilerplate.h  test-launchee.c  test-launcher.c  test-monitor.c  test-send-xmessage.c  test-watch-xmessages.c
